--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
 		<!-- Commons library -->
 		<apache.commons.lang>3.4</apache.commons.lang>
 
+		<!-- Tests -->
+		<junit.version>4.12</junit.version>
+		<assertj.version>2.0.0</assertj.version>
+
 		<!-- Maven Lifecycle Plugins Version -->
 		<maven.pluginclean.version>2.6.1</maven.pluginclean.version>
 		<maven.plugininstall.version>2.5.2</maven.plugininstall.version>
@@ -62,6 +66,20 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>${apache.commons.lang}</version>
+		</dependency>
+
+		<!-- Test Dependencies (Junit, Mockito)  -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
