--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,39 @@
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>Java N-queens-puzzle solvers</name>
+	<inceptionYear>2015</inceptionYear>
+	<url>https://github.com/Sylvain-Bugat/N-queens-puzzle-solvers</url>
+
+	<scm>
+		<url>https://github.com/Sylvain-Bugat/N-queens-puzzle-solvers</url>
+		<connection>scm:git:git://github.com/Sylvain-Bugat/N-queens-puzzle-solvers.git</connection>
+		<developerConnection>scm:git:git@github.com:Sylvain-Bugat/N-queens-puzzle-solvers.git</developerConnection>
+	</scm>
+	<distributionManagement>
+		<site>
+			<id>N-queens-puzzle-solvers-site</id>
+			<url>scm:git:git://github.com/Sylvain-Bugat/N-queens-puzzle-solvers.git</url>
+		</site>
+	</distributionManagement>
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/Sylvain-Bugat/N-queens-puzzle-solvers/issues</url>
+	</issueManagement>
+
+	<licenses>
+		<license>
+			<name>The MIT License (MIT)</name>
+			<url>https://raw.githubusercontent.com/Sylvain-Bugat/N-queens-puzzle-solvers/master/LICENSE</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<id>sbugat</id>
+			<name>Sylvain Bugat</name>
+			<url>https://github.com/Sylvain-Bugat</url>
+		</developer>
+	</developers>
 
 	<!-- Global properties -->
 	<properties>
@@ -54,6 +87,17 @@
 		<maven.plugindependency.version>2.10</maven.plugindependency.version>
 		<maven.pluginrelease.version>2.5.2</maven.pluginrelease.version>
 		<maven.pluginscmpublish.version>1.1</maven.pluginscmpublish.version>
+
+		<!-- Maven reporting plugins -->
+		<maven.pluginowasp.version>1.2.7</maven.pluginowasp.version>
+		<maven.pluginpmd.version>3.4</maven.pluginpmd.version>
+		<maven.pluginfindbugs.version>3.0.1</maven.pluginfindbugs.version>
+		<maven.plugincheckstyle.version>2.15</maven.plugincheckstyle.version>
+		<maven.pluginreports.version>2.8</maven.pluginreports.version>
+		<maven.plugintaglist.version>2.4</maven.plugintaglist.version>
+		<maven.pluginchanges.version>2.11</maven.pluginchanges.version>
+		<maven.pluginjavadoc.version>2.10.3</maven.pluginjavadoc.version>
+		<maven.pluginjxr.version>2.5</maven.pluginjxr.version>
 	</properties>
 
 	<!-- Dependencies -->
@@ -292,4 +336,138 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+
+	<!-- Reports for the maven site, publish with "mvn scm-publish:publish-scm" from a git shell-->
+	<reporting>
+		<plugins>
+			<!-- Reporting plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>${maven.pluginreports.version}</version>
+			</plugin>
+			<!-- Changes report -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-changes-plugin</artifactId>
+				<version>${maven.pluginchanges.version}</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>changes-report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<!-- TODO/FIXME tags -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>taglist-maven-plugin</artifactId>
+				<version>${maven.plugintaglist.version}</version>
+				<configuration>
+					<tagListOptions>
+						<tagClasses>
+							<tagClass>
+							<displayName>Todo and fix</displayName>
+							<tags>
+								<tag>
+									<matchString>todo</matchString>
+									<matchType>ignoreCase</matchType>
+								</tag>
+								<tag>
+									<matchString>FIXME</matchString>
+									<matchType>exact</matchType>
+								</tag>
+							</tags>
+						  </tagClass>
+						</tagClasses>
+					</tagListOptions>
+				</configuration>
+			</plugin>
+			<!-- Dependencies check -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>${maven.pluginversions.version}</version>
+				<configuration>
+					<rulesUri>file:./dependencies-check-rules.xml</rulesUri>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>property-updates-report</report>
+							<report>dependency-updates-report</report>
+							<report>plugin-updates-report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<!-- OWASP dependencies check report-->
+			<!--<plugin>
+				<groupId>org.owasp</groupId>
+				<artifactId>dependency-check-maven</artifactId>
+				<version>${maven.pluginowasp.version}</version>
+				<configuration>
+					<suppressionFile>./owasp-false-positive.xml</suppressionFile>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>check</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>-->
+			<!-- PMD/CPD -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>${maven.pluginpmd.version}</version>
+				<configuration>
+					<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
+					<targetJdk>${maven.compiler.source}</targetJdk>
+					<linkXref>true</linkXref>
+				</configuration>
+			</plugin>
+			<!-- Findbugs -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>${maven.pluginfindbugs.version}</version>
+				<configuration>
+					<effort>Max</effort>
+					<threshold>Low</threshold>
+					<xmlOutput>true</xmlOutput>
+					<findbugsXmlOutput>true</findbugsXmlOutput>
+					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
+					<jvmArgs>-Duser.language=en -Duser.country=US</jvmArgs>
+				</configuration>
+			</plugin>
+			<!-- CheckStyle -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>${maven.plugincheckstyle.version}</version>
+				<configuration>
+					<configLocation>checkstyle.xml</configLocation>
+				</configuration>
+			</plugin>
+			<!-- Javadoc -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${maven.pluginjavadoc.version}</version>
+				<configuration>
+					<show>private</show>
+					<source>${maven.compiler.source}</source>
+				</configuration>
+			</plugin>
+			<!-- Inline sources report -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>${maven.pluginjxr.version}</version>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
