--- a/pom.xml
+++ b/pom.xml
@@ -50,9 +50,14 @@
 		<!-- Source Encoding -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<!-- JDK/JRE Version -->
+		<!-- Java version and compiler options-->
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.fork>true</maven.compiler.fork>
+		<maven.compiler.compilerVersion>${maven.compiler.source}</maven.compiler.compilerVersion>
+		<maven.compiler.optimize>true</maven.compiler.optimize>
+		<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
+		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
 
 		<!-- Maven version -->
 		<maven.version>3.0.5</maven.version>
@@ -149,9 +154,6 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven.plugincompiler.version}</version>
 				<configuration>
-					<compilerVersion>${maven.compiler.source}</compilerVersion>
-					<source>${maven.compiler.source}</source>
-					<target>${maven.compiler.target}</target>
 					<compilerArgs>
 						<arg>-Xlint</arg>
 					</compilerArgs>
